# securesystemslib

./: .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  azure-test-runner.py  ci-requirements.txt  dev-requirements.txt  ed25519_keys.py  exceptions.py  formats.py  hash.py  keydb.py  keys.py  mypy.ini  purepy-requirements.txt  pyca_crypto_keys.py  pycrypto_keys.py  pylintrc  pyproject.toml  requirements-aws.txt  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements-hsm-pinned.txt  requirements-hsm.txt  requirements-kms.txt  requirements-lint.txt  requirements-min.txt  requirements-pinned.txt  requirements-sigstore.txt  requirements-test.txt  requirements-vault.txt  (+6 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: _test.yml  cd.yml  check-upstream-ed25519.yml  ci.yml  hsm.yml  test-kms-aws.yml  test-kms.yml  test-sigstore.yml  test-vault.yaml
debian/: Dockerfile  changelog  clean  control  copyright  rules  watch
debian/patches/: 01_rm_sphincs_tests.diff  01_use_python3_interpreter_in_tests.diff  02_fix_py2_shebang.diff  02_rm_vendored_gitignore.diff  series
debian/upstream/: metadata  signing-key.asc
docs/: CONTRIBUTING.md  CRYPTO_SIGNER.md  SECURITY.md  conf.py  index.rst  migrate_key.py  signer.rst
securesystemslib/: __init__.py  dsse.py  ecdsa_keys.py  ed25519_keys.py  exceptions.py  formats.py  hash.py  hsm.py  hsm_keys.py  interface.py  keydb.py  keys.py  metadata.py  process.py  pyca_crypto_keys.py  pycrypto_keys.py  rsa_keys.py  schema.py  serialization.py  settings.py  signer.py  sphincs_keys.py  spx_keys.py  storage.py  unittest_toolbox.py  util.py
securesystemslib/_gpg/: common.py  constants.py  dsa.py  eddsa.py  exceptions.py  functions.py  handlers.py  rsa.py  util.py
securesystemslib/_internal/: utils.py
securesystemslib/_vendor/: README.md  test-ed25519-upstream.sh
securesystemslib/_vendor/ed25519/: README.rst  ed25519.py  science.py  test_ed25519.py
securesystemslib/convert/: hazmat.py  ssh.py
securesystemslib/gpg/: __init__.py  _lazy.py  common.py  constants.py  dsa.py  eddsa.py  exceptions.py  formats.py  functions.py  handlers.py  process.py  rsa.py  util.py
securesystemslib/signer/: __init__.py  _aws_signer.py  _azure_signer.py  _constants.py  _crypto_signer.py  _crypto_utils.py  _gcp_signer.py  _gpg_signer.py  _hsm_signer.py  _key.py  _signature.py  _signer.py  _sigstore_signer.py  _spx_signer.py  _sslib_signer.py  _tkey_signer.py  _utils.py  _vault_signer.py
tests/: .coveragerc  __init__.py  aggregate_tests.py  check_aws_signer.py  check_azure_signer.py  check_gpg_available.py  check_hsm_signer.py  check_kms_signers.py  check_public_interfaces.py  check_public_interfaces_gpg.py  check_sigstore_signer.py  check_tkey_signer.py  check_vault_signer.py  test_dsse.py  test_ecdsa_keys.py  test_ed25519_keys.py  test_exceptions.py  test_formats.py  test_gpg.py  test_hash.py  test_hsm.py  test_hsm_keys.py  test_hsm_signer.py  test_interface.py  test_keys.py  test_metadata.py  test_migrate_key.py  test_openssh.py  test_process.py  test_pyca_crypto_keys.py  test_pycrypto_keys.py  test_rsa_keys.py  test_schema.py  test_serialization.py  test_signer.py  test_spx_keys.py  test_storage.py  test_tkey_signer.py  test_util.py
tests/data/keystore/: ecdsa_key  ecdsa_key.pub  ed25519_key  ed25519_key.pub
tests/data/legacy/: ecdsa_private_encrypted  ecdsa_private_unencrypted  ecdsa_public  ed25519_private_encrypted  ed25519_private_unencrypted  ed25519_public  rsa_private_encrypted  rsa_private_unencrypted  rsa_public
tests/data/pems/: ecdsa_secp384r1_private.pem  ecdsa_secp384r1_public.pem  ecdsa_secp521r1_private.pem  ecdsa_secp521r1_public.pem  mldsa44_private.pem  mldsa65_private.pem  mldsa87_private.pem
tests/data/ssh/: ecdsa  ecdsa.pub  ed25519  ed25519.pub  generate.sh  rsa  rsa.pub
tests/gpg_keyrings/dsa/: C242A830DAAF1C2BEF604A9EF033A3A3E267B3B1.pem  gpg.conf
tests/gpg_keyrings/eddsa/: pubring.kbx  pubring.kbx~  short.sig  trustdb.gpg
tests/gpg_keyrings/eddsa/openpgp-revocs.d/: 4E630F84838BF6F7447B830B22692F5FEA9E2DD2.rev
tests/gpg_keyrings/eddsa/private-keys-v1.d/: 672E9A973B33784B4579F316820434E5631C086A.key
tests/gpg_keyrings/rsa/: E8AC80C924116DABB51D4B987CB07D6D2C199C7C.raw  F557D0FF451DEF45372591429EA70BD13D883381.raw
tests/scripts/: init-aws-kms.sh  init-vault.sh  stop-vault.sh
