[build-system]
# Version needs manual updates (dependabot/dependabot-core#8465)
requires = ["hatchling==1.18.0"]
build-backend = "hatchling.build"

[project]
name = "securesystemslib"
authors = [{name = "https://www.updateframework.com", email = "theupdateframework@googlegroups.com"}]
license = {text = "MIT"}
description = "A library that provides cryptographic and general-purpose routines for Secure Systems Lab projects at NYU"
readme = "README.md"
keywords = [
    "cryptography",
    "keys",
    "signatures",
    "rsa",
    "ed25519",
    "ecdsa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development",
]
requires-python = "~=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/secure-systems-lab/securesystemslib"
Source = "https://github.com/secure-systems-lab/securesystemslib"
Issues = "https://github.com/secure-systems-lab/securesystemslib/issues"

[project.optional-dependencies]
crypto = ["cryptography>=40.0.0"]
gcpkms = ["google-cloud-kms", "cryptography>=40.0.0"]
azurekms = ["azure-identity", "azure-keyvault-keys", "cryptography>=40.0.0"]
awskms = ["boto3", "botocore", "cryptography>=40.0.0"]
hsm = ["asn1crypto", "cryptography>=40.0.0", "PyKCS11"]
pynacl = ["pynacl>1.2.0"]
PySPX = ["PySPX>=0.5.0"]
sigstore = ["sigstore~=2.0"]

[tool.hatch.version]
path = "securesystemslib/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/tests",
  "/securesystemslib",
  "/requirements*.txt",
  "/tox.ini",
  "/pylintrc",
  "/mypy.ini",
  "/CHANGELOG.md",
  "/.coveragerc",
]

[tool.black]
line-length=80
extend-exclude="_vendor"

[tool.isort]
profile="black"
line_length=80
known_first_party = ["securesystemslib"]
extend_skip_glob=["*/_vendor/*"]
